--- a/index.html
+++ b/index.html
@@ -1310,140 +1310,7 @@
         </div>
       </section>
       <!-- 店家logo區 -->
-      <section id="shops_logo">
-        <div class="shop-logo">
-          <div class="shop-logo-top">
-            <a href=""
-              ><img src="./images/dessert_logo-01.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-02.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-03.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-04.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-05.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-06.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-07.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-08.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-09.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-10.png" alt="店家logo"
-            /></a>
-          </div>
-          <div class="shop-logo-top">
-            <a href=""
-              ><img src="./images/dessert_logo-01.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-02.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-03.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-04.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-05.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-06.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-07.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-08.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-09.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-10.png" alt="店家logo"
-            /></a>
-          </div>
-        </div>
-        <div class="shop-logo2">
-          <div class="shop-logo-bottom">
-            <a href=""
-              ><img src="./images/dessert_logo-01.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-02.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-03.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-04.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-05.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-06.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-07.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-08.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-09.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-10.png" alt="店家logo"
-            /></a>
-          </div>
-          <div class="shop-logo-bottom">
-            <a href=""
-              ><img src="./images/dessert_logo-01.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-02.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-03.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-04.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-05.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-06.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-07.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-08.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-09.png" alt="店家logo"
-            /></a>
-            <a href=""
-              ><img src="./images/dessert_logo-10.png" alt="店家logo"
-            /></a>
-          </div>
-        </div>
-      </section>
+      <section id="shops_logo"></section>
 
       <div class="page-bottom-bg">
         <!-- 表單區 -->
