--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
     </header>
     <div class="nav-box">
-      <input type="checkbox" name="nav-button" id="nav-button" />
+      <input type="checkbox" name="nav-button" id="nav-button" aria-label="menu button" />
       <nav id="menu">
         <a href="./index.html">首頁</a>
         <a href="./pages/news.html"> 最新消息</a>
@@ -328,8 +328,8 @@
             </div>
           </div>
           <div class="about-page-btns">
-            <button class="aboutBtn active"></button>
-            <button class="aboutBtn"></button>
+            <button class="aboutBtn active" alt="about section page 1"></button>
+            <button class="aboutBtn" alt="about section page 2"></button>
           </div>
         </div>
       </section>
@@ -400,7 +400,7 @@
               <p>法式甜點 | 可麗露食譜與做法</p>
             </div>
           </a>
-          <a href="./pages/news.html" class="news-btn-more"> </a>
+          <a href="./pages/news.html" class="news-btn-more" aria-label="Click this button to view more up-to-date information about shops."> </a>
         </div>
       </section>
       <!-- 訊息彈跳視窗 -->
@@ -1437,7 +1437,7 @@
                   <div class="modal-container">
                     <div class="newsletter-modal">
                       <p>Thank You For Subscribing !</p>
-                      <span class="x" draggable="true">&times;</span>
+                      <span class="x" draggable="true" aria-label="Close"></span>&times;</span>
                     </div>
                   </div>
                 </form>
