for Screen reader 要有 aria-label 屬性(不是alt)

--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@
             </div>
           </div>
           <div class="about-page-btns">
-            <button class="aboutBtn active" alt="about section page 1"></button>
-            <button class="aboutBtn" alt="about section page 2"></button>
+            <button class="aboutBtn active" aria-label="about section page 1"></button>
+            <button class="aboutBtn" aria-label="about section page 2"></button>
           </div>
         </div>
       </section>
