png檔換成webp檔(變小體積)

--- a/index.html
+++ b/index.html
@@ -45,35 +45,35 @@
           <div class="background-active">
             <img
               class="background-shops"
-              src="./images/banner-1.jpg"
+              src="./images/banner-1.webp"
               alt="販售可麗露店家"
             />
           </div>
           <div class="background-other">
             <img
               class="background-shops"
-              src="./images/banner-2.jpg"
+              src="./images/banner-2.webp"
               alt="販售可麗露店家"
             />
           </div>
           <div class="background-other">
             <img
               class="background-shops"
-              src="./images/banner-3.jpg"
+              src="./images/banner-3.webp"
               alt="販售可麗露店家"
             />
           </div>
           <div class="background-other">
             <img
               class="background-shops"
-              src="./images/banner-4.jpg"
+              src="./images/banner-4.webp"
               alt="販售可麗露店家"
             />
           </div>
           <div class="background-other">
             <img
               class="background-shops"
-              src="./images/banner-5.jpg"
+              src="./images/banner-5.webp"
               alt="販售可麗露店家"
             />
           </div>
@@ -344,7 +344,7 @@
             href=""
             class="news-card news-card1"
             data-title="歡慶一年一度聖誕交換禮物 | TOP3可麗露甜點禮盒推薦"
-            data-img="./images/news-img1.jpg"
+            data-img="./images/news-img1.webp"
             data-index="0"
             alt="news-img1"
           >
@@ -356,7 +356,7 @@
             href=""
             class="news-card news-card2"
             data-title="新口味上市！限時三天優惠開跑"
-            data-img="./images/news-img2.jpg"
+            data-img="./images/news-img2.webp"
             data-index="1"
             alt="news-img2"
           >
@@ -368,7 +368,7 @@
             href=""
             class="news-card news-card3"
             data-title="每日限量！義大利頂級巧克力口味內餡可麗露"
-            data-img="./images/news-img3.jpg"
+            data-img="./images/news-img3.webp"
             data-index="2"
             alt="news-img3"
           >
@@ -380,7 +380,7 @@
             href=""
             class="news-card news-card4"
             data-title="假日揪好姊妹逛台北松山甜點文創市集 | 眾多手工甜點任你挑"
-            data-img="./images/news-img4.jpg"
+            data-img="./images/news-img4.webp"
             data-index="3"
             alt="news-img4"
           >
@@ -392,7 +392,7 @@
             href=""
             class="news-card news-card5"
             data-title="法式甜點 | 可麗露食譜與做法"
-            data-img="./images/news-img5.jpg"
+            data-img="./images/news-img5.webp"
             data-index="4"
             alt="news-img5"
           >
@@ -439,7 +439,7 @@
               <div class="customers-item">
                 <div class="name">
                   <div class="name-img">
-                    <img src="./images/customer-1.jpg" alt="顧客頭像" />
+                    <img src="./images/customer-1.webp" alt="顧客頭像" />
                   </div>
                   <div class="name-text">
                     <span>Meredith Smith</span>
@@ -479,7 +479,7 @@
               <div class="customers-item">
                 <div class="name">
                   <div class="name-img">
-                    <img src="./images/customer-2.jpg" alt="顧客頭像" />
+                    <img src="./images/customer-2.webp" alt="顧客頭像" />
                   </div>
                   <div class="name-text">
                     <span>Meredith Smith</span>
@@ -519,7 +519,7 @@
               <div class="customers-item">
                 <div class="name">
                   <div class="name-img">
-                    <img src="./images/customer-3.jpg" alt="顧客頭像" />
+                    <img src="./images/customer-3.webp" alt="顧客頭像" />
                   </div>
                   <div class="name-text">
                     <span>Meredith Smith</span>
@@ -559,7 +559,7 @@
               <div class="customers-item">
                 <div class="name">
                   <div class="name-img">
-                    <img src="./images/customer-4.jpg" alt="顧客頭像" />
+                    <img src="./images/customer-4.webp" alt="顧客頭像" />
                   </div>
                   <div class="name-text">
                     <span>Meredith Smith</span>
@@ -599,7 +599,7 @@
               <div class="customers-item">
                 <div class="name">
                   <div class="name-img">
-                    <img src="./images/customer-5.jpg" alt="顧客頭像" />
+                    <img src="./images/customer-5.webp" alt="顧客頭像" />
                   </div>
                   <div class="name-text">
                     <span>Meredith Smith</span>
@@ -632,7 +632,7 @@
                     </div>
                   </div>
                   <a href="" class="shops-logo">
-                    <img src="./images/dessert_logo-05.png" alt="店家logo" />
+                    <img src="./images/dessert_logo-05.webp" alt="店家logo" />
                   </a>
                 </div>
               </div>
@@ -641,7 +641,7 @@
               <div class="customers-item">
                 <div class="name">
                   <div class="name-img">
-                    <img src="./images/customer-6.jpg" alt="顧客頭像" />
+                    <img src="./images/customer-6.webp" alt="顧客頭像" />
                   </div>
                   <div class="name-text">
                     <span>Meredith Smith</span>
@@ -672,14 +672,14 @@
                     </div>
                   </div>
                   <a href="" class="shops-logo">
-                    <img src="./images/dessert_logo-06.png" alt="店家logo" />
+                    <img src="./images/dessert_logo-06.webp" alt="店家logo" />
                   </a>
                 </div>
               </div>
               <div class="customers-item">
                 <div class="name">
                   <div class="name-img">
-                    <img src="./images/customer-7.jpg" alt="顧客頭像" />
+                    <img src="./images/customer-7.webp" alt="顧客頭像" />
                   </div>
                   <div class="name-text">
                     <span>Meredith Smith</span>
@@ -719,7 +719,7 @@
               <div class="customers-item">
                 <div class="name">
                   <div class="name-img">
-                    <img src="./images/customer-8.jpg" alt="顧客頭像" />
+                    <img src="./images/customer-8.webp" alt="顧客頭像" />
                   </div>
                   <div class="name-text">
                     <span>Meredith Smith</span>
@@ -757,7 +757,7 @@
               <div class="customers-item">
                 <div class="name">
                   <div class="name-img">
-                    <img src="./images/customer-9.jpg" alt="顧客頭像" />
+                    <img src="./images/customer-9.webp" alt="顧客頭像" />
                   </div>
                   <div class="name-text">
                     <span>Meredith Smith</span>
@@ -797,7 +797,7 @@
               <div class="customers-item">
                 <div class="name">
                   <div class="name-img">
-                    <img src="./images/customer-10.jpg" alt="顧客頭像" />
+                    <img src="./images/customer-10.webp" alt="顧客頭像" />
                   </div>
                   <div class="name-text">
                     <span>Meredith Smith</span>
@@ -841,7 +841,7 @@
               <div class="customers-item">
                 <div class="name">
                   <div class="name-img">
-                    <img src="./images/customer-1.jpg" alt="顧客頭像" />
+                    <img src="./images/customer-1.webp" alt="顧客頭像" />
                   </div>
                   <div class="name-text">
                     <span>Meredith Smith</span>
@@ -881,7 +881,7 @@
               <div class="customers-item">
                 <div class="name">
                   <div class="name-img">
-                    <img src="./images/customer-2.jpg" alt="顧客頭像" />
+                    <img src="./images/customer-2.webp" alt="顧客頭像" />
                   </div>
                   <div class="name-text">
                     <span>Meredith Smith</span>
@@ -921,7 +921,7 @@
               <div class="customers-item">
                 <div class="name">
                   <div class="name-img">
-                    <img src="./images/customer-3.jpg" alt="顧客頭像" />
+                    <img src="./images/customer-3.webp" alt="顧客頭像" />
                   </div>
                   <div class="name-text">
                     <span>Meredith Smith</span>
@@ -961,7 +961,7 @@
               <div class="customers-item">
                 <div class="name">
                   <div class="name-img">
-                    <img src="./images/customer-4.jpg" alt="顧客頭像" />
+                    <img src="./images/customer-4.webp" alt="顧客頭像" />
                   </div>
                   <div class="name-text">
                     <span>Meredith Smith</span>
@@ -1001,7 +1001,7 @@
               <div class="customers-item">
                 <div class="name">
                   <div class="name-img">
-                    <img src="./images/customer-5.jpg" alt="顧客頭像" />
+                    <img src="./images/customer-5.webp" alt="顧客頭像" />
                   </div>
                   <div class="name-text">
                     <span>Meredith Smith</span>
@@ -1041,7 +1041,7 @@
               <div class="customers-item">
                 <div class="name">
                   <div class="name-img">
-                    <img src="./images/customer-6.jpg" alt="顧客頭像" />
+                    <img src="./images/customer-6.webp" alt="顧客頭像" />
                   </div>
                   <div class="name-text">
                     <span>Meredith Smith</span>
@@ -1079,7 +1079,7 @@
               <div class="customers-item">
                 <div class="name">
                   <div class="name-img">
-                    <img src="./images/customer-7.jpg" alt="顧客頭像" />
+                    <img src="./images/customer-7.webp" alt="顧客頭像" />
                   </div>
                   <div class="name-text">
                     <span>Meredith Smith</span>
@@ -1119,7 +1119,7 @@
               <div class="customers-item">
                 <div class="name">
                   <div class="name-img">
-                    <img src="./images/customer-8.jpg" alt="顧客頭像" />
+                    <img src="./images/customer-8.webp" alt="顧客頭像" />
                   </div>
                   <div class="name-text">
                     <span>Meredith Smith</span>
@@ -1159,7 +1159,7 @@
               <div class="customers-item">
                 <div class="name">
                   <div class="name-img">
-                    <img src="./images/customer-9.jpg" alt="顧客頭像" />
+                    <img src="./images/customer-9.webp" alt="顧客頭像" />
                   </div>
                   <div class="name-text">
                     <span>Meredith Smith</span>
@@ -1199,7 +1199,7 @@
               <div class="customers-item">
                 <div class="name">
                   <div class="name-img">
-                    <img src="./images/customer-10.jpg" alt="顧客頭像" />
+                    <img src="./images/customer-10.webp" alt="顧客頭像" />
                   </div>
                   <div class="name-text">
                     <span>Meredith Smith</span>
