perf:將關鍵資源style.css rel屬性設定為reload

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://api.tiles.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preload" href="./css/style.css" />
   </head>
 
   <body>
@@ -632,7 +632,7 @@
                     </div>
                   </div>
                   <a href="" class="shops-logo">
-                    <img src="./images/dessert_logo-05.webp" alt="店家logo" />
+                    <img src="./images/dessert_logo-05.png" alt="店家logo" />
                   </a>
                 </div>
               </div>
@@ -672,7 +672,7 @@
                     </div>
                   </div>
                   <a href="" class="shops-logo">
-                    <img src="./images/dessert_logo-06.webp" alt="店家logo" />
+                    <img src="./images/dessert_logo-06.png" alt="店家logo" />
                   </a>
                 </div>
               </div>
