--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SD Canelés | 可麗露資訊平台</title>
     <!-- slick輪播 -->
-    <link rel="preload" href="./css/style.css" />
     <link rel="stylesheet" href="./css/slick.css" />
     <link rel="stylesheet" href="./css/slick-theme.css" />
     <link
       href="https://api.tiles.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css"
       rel="stylesheet"
     />
-    
+    <link rel="stylesheet"  href="./css/style.css" />
   </head>
 
   <body>
@@ -79,7 +78,7 @@
             />
           </div>
         </div>
-
+        
         <div class="banner-logotext">
           <div class="logotext logotext1">
             <h2>SD Canelés&emsp;SD Canelés&emsp;SD Canelés&emsp;</h2>
